# ot-harjoitustyo

./: README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmäärittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
slime-harvester/: .coverage  .gitignore  pyproject.toml  tasks.py
slime-harvester/dokumentaatio/: ai.md  arkkitehtuuri.md  changelob.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmäärittely.md
slime-harvester/src/: enemy_movement.py  enemy_path.py  enemy_timing.py  game.py  game_renderer.py  game_state.py  generate_wave_config.py  index.py  index.spec  load_image.py  player_stats.py  projectiles.py  settings.py  tilemap.py  tower_button.py  user_interface.py
slime-harvester/src/config/: generate_wave_config.py  load_image.py  settings.py  tilemap.py
slime-harvester/src/defences/: tower1.py  tower2.py
slime-harvester/src/enemies/: enemy_manager.py  enemy_movement.py  enemy_path.py  enemy_timing.py  wave_manager.py
slime-harvester/src/game/: game.py  game_renderer.py  game_state.py
slime-harvester/src/input/: input_handler.py  tower_dragging.py
slime-harvester/src/maps/: map1.txt  map2.txt
slime-harvester/src/projectiles/: projectiles.py
slime-harvester/src/tests/: game_state_test.py  game_test.py  player_stats_test.py
slime-harvester/src/ui/: tower_button.py  user_interface.py
