[project]
name = "slime-harvester"
version = "0.1.0"
description = ""
authors = [
    {name = "Touko",email = "touko.ristiranta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "pyinstaller (>=6.17.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pylint.main]
init-hook = "import sys; sys.path.insert(0, 'src')"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.12.0,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)"
]
